--- a/PyCitySchools/PyCitySchools_01.ipynb
+++ b/PyCitySchools/PyCitySchools_01.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -64,10 +64,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'Number of Students = 39170'"
+      "text/plain": "'Total Budget = $82932329558'"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 32
     }
    ],
    "source": [
@@ -82,6 +82,8 @@
     "f\"Number of Students = {number_of_students}\"\n",
     "\n",
     "# Calculate the total budget\n",
+    "total_budget = reduced_df['Budget $'].sum()\n",
+    "f\"Total Budget = ${total_budget}\"\n",
     "\n",
     "# Calculate the average math score \n",
     "\n",
