After Student Percent Both

--- a/PyCitySchools/PyCitySchools_01.ipynb
+++ b/PyCitySchools/PyCitySchools_01.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -64,10 +64,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'Number of students who passed reading = 33610'"
+      "text/plain": "'Percent of students who passed both Math and Reading = 65.17232575950983'"
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 44
     }
    ],
    "source": [
@@ -111,9 +111,16 @@
     "f\"Number of students who passed reading = {num_passed_reading}\"\n",
     "#Calculate the percent of students who passed reading\n",
     "percent_passed_reading = num_passed_reading / number_of_students * 100\n",
-    "f\"Percent of students who passed reading = {percent_passed_math}\"\n",
+    "f\"Percent of students who passed reading = {percent_passed_reading}\"\n",
+    "df_passed_math.head()\n",
+    "df_passed_reading.head()\n",
     "\n",
     "# Calculate the percentage of students who passed math **and** reading (% Overall Passing)\n",
+    "# Merge the two data frames using an inner join\n",
+    "df_passed_both = pd.merge(df_passed_math,df_passed_reading, on = \"Student ID\",how = \"inner\")\n",
+    "num_passed_both = len(df_passed_both)\n",
+    "percent_passed_both = num_passed_both / number_of_students * 100\n",
+    "f\"Percent of students who passed both Math and Reading = {percent_passed_both}\"\n",
     "\n",
     "# Create a dataframe to hold the above results\n",
     "\n",
