District data frame partly cleaned up

--- a/PyCitySchools/PyCitySchools_01.ipynb
+++ b/PyCitySchools/PyCitySchools_01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Student Name</th>\n      <th>Gender</th>\n      <th>Grade</th>\n      <th>School Name</th>\n      <th>Reading Score</th>\n      <th>Math Score</th>\n      <th>Type</th>\n      <th># Students</th>\n      <th>Budget $</th>\n    </tr>\n    <tr>\n      <th>Student ID</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Paul Bradley</td>\n      <td>M</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>66</td>\n      <td>79</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Victor Smith</td>\n      <td>M</td>\n      <td>12th</td>\n      <td>Huang High School</td>\n      <td>94</td>\n      <td>61</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Kevin Rodriguez</td>\n      <td>M</td>\n      <td>12th</td>\n      <td>Huang High School</td>\n      <td>90</td>\n      <td>60</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Dr. Richard Scott</td>\n      <td>M</td>\n      <td>12th</td>\n      <td>Huang High School</td>\n      <td>67</td>\n      <td>58</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Bonnie Ray</td>\n      <td>F</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>97</td>\n      <td>84</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 55
     }
    ],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
@@ -64,10 +64,11 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'Percent of students who passed both Math and Reading = 65.17232575950983'"
+      "text/plain": "   Total Schools Total Students     Total Budget Average Math Score  \\\n0             15         39,170  $82,932,329,558          78.985371   \n\n  Average Reading Score  % Passing Math % Passing Reading  % Overall Passing  \n0             81.877840       74.980853            85.81%          65.172326  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total Schools</th>\n      <th>Total Students</th>\n      <th>Total Budget</th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>15</td>\n      <td>39,170</td>\n      <td>$82,932,329,558</td>\n      <td>78.985371</td>\n      <td>81.877840</td>\n      <td>74.980853</td>\n      <td>85.81%</td>\n      <td>65.172326</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 54
     }
    ],
    "source": [
@@ -100,7 +101,7 @@
     "num_passed_math = len(df_passed_math)\n",
     "f\"Number of students who passed math = {num_passed_math}\"\n",
     "#Calculate the percent of students who passed math\n",
-    "percent_passed_math = num_passed_math / number_of_students * 100\n",
+    "percent_passed_math = (num_passed_math / number_of_students * 100).round(2).astype(str) + \"%\"\n",
     "f\"Percent of students who passed math = {percent_passed_math}\"\n",
     "\n",
     "# Calculate the percentage of students with a passing reading score (70 or greater)\n",
@@ -110,7 +111,7 @@
     "num_passed_reading = len(df_passed_reading)\n",
     "f\"Number of students who passed reading = {num_passed_reading}\"\n",
     "#Calculate the percent of students who passed reading\n",
-    "percent_passed_reading = num_passed_reading / number_of_students * 100\n",
+    "percent_passed_reading = (num_passed_reading / number_of_students * 100).round(2).astype(str) + \"%\"\n",
     "f\"Percent of students who passed reading = {percent_passed_reading}\"\n",
     "df_passed_math.head()\n",
     "df_passed_reading.head()\n",
@@ -119,12 +120,22 @@
     "# Merge the two data frames using an inner join\n",
     "df_passed_both = pd.merge(df_passed_math,df_passed_reading, on = \"Student ID\",how = \"inner\")\n",
     "num_passed_both = len(df_passed_both)\n",
-    "percent_passed_both = num_passed_both / number_of_students * 100\n",
+    "percent_passed_both = (num_passed_both / number_of_students * 100).round(2).astype(str) + \"%\"\n",
     "f\"Percent of students who passed both Math and Reading = {percent_passed_both}\"\n",
     "\n",
     "# Create a dataframe to hold the above results\n",
+    "district_list = [{\"Total Schools\": number_of_schools,\"Total Students\": number_of_students,\"Total Budget\": total_budget,\n",
+    "                \"Average Math Score\": average_math_score,\"Average Reading Score\": average_reading_score,\"% Passing Math\": percent_passed_math,\n",
+    "                \"% Passing Reading\": percent_passed_reading,\"% Overall Passing\": percent_passed_both}]\n",
+    "district_df = pd.DataFrame(district_list)\n",
     "\n",
-    "# Optional: give the displayed data cleaner formatting"
+    "\n",
+    "# Optional: give the displayed data cleaner formatting\n",
+    "district_df[\"Total Students\"] = district_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "district_df[\"Total Budget\"] = district_df[\"Total Budget\"].map(\"${:,}\".format)\n",
+    "district_df[\"Average Math Score\"] = district_df[\"Average Math Score\"].map(\"{:2f}\".format)\n",
+    "district_df[\"Average Reading Score\"] = district_df[\"Average Reading Score\"].map(\"{:2f}\".format)\n",
+    "district_df\n"
    ]
   },
   {
