--- a/PyCitySchools/PyCitySchools_01.ipynb
+++ b/PyCitySchools/PyCitySchools_01.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {
     "tags": []
    },
@@ -64,11 +64,11 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "   Total Schools Total Students     Total Budget Average Math Score  \\\n0             15         39,170  $82,932,329,558          78.985371   \n\n  Average Reading Score  % Passing Math % Passing Reading  % Overall Passing  \n0             81.877840       74.980853            85.81%          65.172326  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total Schools</th>\n      <th>Total Students</th>\n      <th>Total Budget</th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>15</td>\n      <td>39,170</td>\n      <td>$82,932,329,558</td>\n      <td>78.985371</td>\n      <td>81.877840</td>\n      <td>74.980853</td>\n      <td>85.81%</td>\n      <td>65.172326</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   Total Schools Total Students     Total Budget Average Math Score  \\\n0             15         39,170  $82,932,329,558              78.99   \n\n  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n0                 81.88         74.98%            85.81%            65.17%  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total Schools</th>\n      <th>Total Students</th>\n      <th>Total Budget</th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>15</td>\n      <td>39,170</td>\n      <td>$82,932,329,558</td>\n      <td>78.99</td>\n      <td>81.88</td>\n      <td>74.98%</td>\n      <td>85.81%</td>\n      <td>65.17%</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 57
     }
    ],
    "source": [
@@ -133,8 +133,8 @@
     "# Optional: give the displayed data cleaner formatting\n",
     "district_df[\"Total Students\"] = district_df[\"Total Students\"].map(\"{:,}\".format)\n",
     "district_df[\"Total Budget\"] = district_df[\"Total Budget\"].map(\"${:,}\".format)\n",
-    "district_df[\"Average Math Score\"] = district_df[\"Average Math Score\"].map(\"{:2f}\".format)\n",
-    "district_df[\"Average Reading Score\"] = district_df[\"Average Reading Score\"].map(\"{:2f}\".format)\n",
+    "district_df[\"Average Math Score\"] = district_df[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
+    "district_df[\"Average Reading Score\"] = district_df[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
     "district_df\n"
    ]
   },
