Starting School Summary

--- a/PyCitySchools/PyCitySchools_01.ipynb
+++ b/PyCitySchools/PyCitySchools_01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Student Name</th>\n      <th>Gender</th>\n      <th>Grade</th>\n      <th>School Name</th>\n      <th>Reading Score</th>\n      <th>Math Score</th>\n      <th>Type</th>\n      <th># Students</th>\n      <th>Budget $</th>\n    </tr>\n    <tr>\n      <th>Student ID</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Paul Bradley</td>\n      <td>M</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>66</td>\n      <td>79</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Victor Smith</td>\n      <td>M</td>\n      <td>12th</td>\n      <td>Huang High School</td>\n      <td>94</td>\n      <td>61</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Kevin Rodriguez</td>\n      <td>M</td>\n      <td>12th</td>\n      <td>Huang High School</td>\n      <td>90</td>\n      <td>60</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Dr. Richard Scott</td>\n      <td>M</td>\n      <td>12th</td>\n      <td>Huang High School</td>\n      <td>67</td>\n      <td>58</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Bonnie Ray</td>\n      <td>F</td>\n      <td>9th</td>\n      <td>Huang High School</td>\n      <td>97</td>\n      <td>84</td>\n      <td>District</td>\n      <td>2917</td>\n      <td>1910635</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 25
     }
    ],
    "source": [
@@ -47,8 +47,9 @@
     "# Get rid of unneeded columns\n",
     "reduced_df = renamed_df[[\"Student ID\",\"Student Name\",\"Gender\",\"Grade\",\"School Name\",\"Reading Score\",\"Math Score\",\"Type\",\"# Students\",\"Budget $\"]]\n",
     "# Don't show the index\n",
-    "reduced_df.set_index('Student ID', inplace=True)\n",
+    "\n",
     "# Show first few rows\n",
+    "reduced_df.set_index('Student ID', inplace=True)\n",
     "reduced_df.head()\n",
     "#Maybe the students with \"Dr.\" in front of their names are real-life Doogie Howser, MDs\n",
     "\n"
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -68,7 +69,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total Schools</th>\n      <th>Total Students</th>\n      <th>Total Budget</th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>15</td>\n      <td>39,170</td>\n      <td>$82,932,329,558</td>\n      <td>78.99</td>\n      <td>81.88</td>\n      <td>74.98%</td>\n      <td>85.81%</td>\n      <td>65.17%</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 28
     }
    ],
    "source": [
@@ -135,7 +136,9 @@
     "district_df[\"Total Budget\"] = district_df[\"Total Budget\"].map(\"${:,}\".format)\n",
     "district_df[\"Average Math Score\"] = district_df[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
     "district_df[\"Average Reading Score\"] = district_df[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
-    "district_df\n"
+    "# district_df.set_index(\"Total Schools\", inplace=True)\n",
+    "district_df\n",
+    "\n"
    ]
   },
   {
@@ -147,44 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of        Student ID       student_name gender grade         school_name  \\\n",
-       "0               0       Paul Bradley      M   9th   Huang High School   \n",
-       "1               1       Victor Smith      M  12th   Huang High School   \n",
-       "2               2    Kevin Rodriguez      M  12th   Huang High School   \n",
-       "3               3  Dr. Richard Scott      M  12th   Huang High School   \n",
-       "4               4         Bonnie Ray      F   9th   Huang High School   \n",
-       "...           ...                ...    ...   ...                 ...   \n",
-       "39165       39165       Donna Howard      F  12th  Thomas High School   \n",
-       "39166       39166          Dawn Bell      F  10th  Thomas High School   \n",
-       "39167       39167     Rebecca Tanner      F   9th  Thomas High School   \n",
-       "39168       39168       Desiree Kidd      F  10th  Thomas High School   \n",
-       "39169       39169    Carolyn Jackson      F  11th  Thomas High School   \n",
-       "\n",
-       "       reading_score  math_score  School ID      type  size   budget  \n",
-       "0                 66          79          0  District  2917  1910635  \n",
-       "1                 94          61          0  District  2917  1910635  \n",
-       "2                 90          60          0  District  2917  1910635  \n",
-       "3                 67          58          0  District  2917  1910635  \n",
-       "4                 97          84          0  District  2917  1910635  \n",
-       "...              ...         ...        ...       ...   ...      ...  \n",
-       "39165             99          90         14   Charter  1635  1043130  \n",
-       "39166             95          70         14   Charter  1635  1043130  \n",
-       "39167             73          84         14   Charter  1635  1043130  \n",
-       "39168             99          90         14   Charter  1635  1043130  \n",
-       "39169             95          75         14   Charter  1635  1043130  \n",
-       "\n",
-       "[39170 rows x 11 columns]>"
-      ]
+      "text/plain": "<bound method NDFrame.head of        Student ID       student_name gender grade         school_name  \\\n0               0       Paul Bradley      M   9th   Huang High School   \n1               1       Victor Smith      M  12th   Huang High School   \n2               2    Kevin Rodriguez      M  12th   Huang High School   \n3               3  Dr. Richard Scott      M  12th   Huang High School   \n4               4         Bonnie Ray      F   9th   Huang High School   \n...           ...                ...    ...   ...                 ...   \n39165       39165       Donna Howard      F  12th  Thomas High School   \n39166       39166          Dawn Bell      F  10th  Thomas High School   \n39167       39167     Rebecca Tanner      F   9th  Thomas High School   \n39168       39168       Desiree Kidd      F  10th  Thomas High School   \n39169       39169    Carolyn Jackson      F  11th  Thomas High School   \n\n       reading_score  math_score  School ID      type  size   budget  \n0                 66          79          0  District  2917  1910635  \n1                 94          61          0  District  2917  1910635  \n2                 90          60          0  District  2917  1910635  \n3                 67          58          0  District  2917  1910635  \n4                 97          84          0  District  2917  1910635  \n...              ...         ...        ...       ...   ...      ...  \n39165             99          90         14   Charter  1635  1043130  \n39166             95          70         14   Charter  1635  1043130  \n39167             73          84         14   Charter  1635  1043130  \n39168             99          90         14   Charter  1635  1043130  \n39169             95          75         14   Charter  1635  1043130  \n\n[39170 rows x 11 columns]>"
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 41
     }
    ],
    "source": [
@@ -194,22 +169,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "school_name\nBailey High School       4976\nCabrera High School      1858\nFigueroa High School     2949\nFord High School         2739\nGriffin High School      1468\nHernandez High School    4635\nHolden High School        427\nHuang High School        2917\nJohnson High School      4761\nPena High School          962\nRodriguez High School    3999\nShelton High School      1761\nThomas High School       1635\nWilson High School       2283\nWright High School       1800\ndtype: int64"
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
    "source": [
-    "* Create an overview table that summarizes key metrics about each school, including:\n",
-    "  * School Name\n",
-    "  * School Type\n",
-    "  * Total Students\n",
-    "  * Total School Budget\n",
-    "  * Per Student Budget\n",
-    "  * Average Math Score\n",
-    "  * Average Reading Score\n",
-    "  * % Passing Math\n",
-    "  * % Passing Reading\n",
-    "  * % Overall Passing (The percentage of students that passed math **and** reading.)\n",
+    "# Sort by school_name\n",
+    "df_sortby_school = df.sort_values(\"school_name\")\n",
+    "# See a few rows\n",
+    "df_sortby_school.head()\n",
+    "# Group by school\n",
+    "df_grouped = df_sortby_school.groupby(\"school_name\")\n",
+    "# Get number of rows (students) for each school\n",
+    "df_grouped.size()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Create an overview table that summarizes key metrics about each school, including:\n",
+    "  # School Name\n",
+    "  # School Type\n",
+    "  # Total Students\n",
+    "  # Total School Budget\n",
+    "  # Per Student Budget\n",
+    "  # Average Math Score\n",
+    "  # Average Reading Score\n",
+    "  # % Passing Math\n",
+    "  # % Passing Reading\n",
+    "  # % Overall Passing (The percentage of students that passed math **and** reading.)\n",
     "  \n",
-    "* Create a dataframe to hold the above results"
+    "# Create a dataframe to hold the above results"
    ]
   },
   {
