Stuck like glue

--- a/PyCitySchools/PyCitySchools_01.ipynb
+++ b/PyCitySchools/PyCitySchools_01.ipynb
@@ -170,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "school_name\nBailey High School       4976\nCabrera High School      1858\nFigueroa High School     2949\nFord High School         2739\nGriffin High School      1468\nHernandez High School    4635\nHolden High School        427\nHuang High School        2917\nJohnson High School      4761\nPena High School          962\nRodriguez High School    3999\nShelton High School      1761\nThomas High School       1635\nWilson High School       2283\nWright High School       1800\ndtype: int64"
+      "text/plain": "school_name\nBailey High School      4976\nCabrera High School     1858\nFigueroa High School    2949\nFord High School        2739\nGriffin High School     1468\ndtype: int64"
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 69
     }
    ],
    "source": [
@@ -190,16 +190,19 @@
     "# Group by school\n",
     "df_grouped = df_sortby_school.groupby(\"school_name\")\n",
     "# Get number of rows (students) for each school\n",
-    "df_grouped.size()\n",
-    "\n",
-    "\n",
+    "df_summary = df_grouped.size()\n",
+    "df_summary.head()\n",
+    "df_summary.reset_index()\n",
+    "df_summary.head()\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# Create an overview table that summarizes key metrics about each school, including:\n",
     "  # School Name\n",
+    "\n",
     "  # School Type\n",
+    " \n",
     "  # Total Students\n",
     "  # Total School Budget\n",
     "  # Per Student Budget\n",
